--- a/srv/apps/gitlab/docker-compose.yml
+++ b/srv/apps/gitlab/docker-compose.yml
@@ -2,18 +2,26 @@ services:
   gitlab:
     image: gitlab/gitlab-ce:latest
     hostname: gitlab.local
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./config:/etc/gitlab
       - ./logs:/var/log/gitlab
       - ./data:/var/opt/gitlab
     labels:
       - "traefik.enable=true"
+
+      # HTTP/HTTPS
       - "traefik.http.routers.gitlab.rule=Host(`gitlab.codrstudio.dev`)"
       - "traefik.http.routers.gitlab.entrypoints=websecure"
       - "traefik.http.routers.gitlab.tls.certresolver=letsencrypt"
       - "traefik.http.services.gitlab.loadbalancer.server.port=80"
-    networks: 
+
+      # SSH via TCP (porta 2222)
+      - "traefik.tcp.routers.gitlab-ssh.rule=HostSNI(`*`)"
+      - "traefik.tcp.routers.gitlab-ssh.entrypoints=ssh"
+      - "traefik.tcp.routers.gitlab-ssh.service=gitlab-ssh-svc"
+      - "traefik.tcp.services.gitlab-ssh-svc.loadbalancer.server.port=22"
+    networks:
       - codr-net
 
 networks:
