--- a/srv/apps/qdrant/docker-compose.yml
+++ b/srv/apps/qdrant/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   qdrant:
     image: qdrant/qdrant
-    restart: always
+    restart: unless-stopped
     ports:
       - "6333:6333"
     volumes:
