--- a/srv/apps/traefik/traefik.yml
+++ b/srv/apps/traefik/traefik.yml
@@ -20,6 +20,9 @@ providers:
   docker:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
+  file:
+    directory: /etc/traefik/dynamic
+    watch: true
 
 certificatesResolvers:
   letsencrypt:
@@ -29,3 +32,4 @@ certificatesResolvers:
       tlsChallenge: {}
 
 accessLog: {}
+
