--- a/srv/apps/qdrant/docker-compose.yml
+++ b/srv/apps/qdrant/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   qdrant:
     image: qdrant/qdrant
+    container_name: qdrant
     restart: unless-stopped
     ports:
       - "6333:6333"
