Ajustado configuracao de certificado do postgres

--- a/srv/apps/postgres/docker-compose.yml
+++ b/srv/apps/postgres/docker-compose.yml
@@ -9,21 +9,35 @@ services:
       - .env
     volumes:
       - ./data:/var/lib/postgresql/data
+      - ./certs:/certs:ro
+    command: >
+      postgres -c ssl=on
+               -c ssl_cert_file=/certs/server.crt
+               -c ssl_key_file=/certs/server.key
+               -c ssl_ca_file=/certs/ca.crt
+               -c ssl_ciphers='ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384'
+               -c ssl_prefer_server_ciphers=on
+               -c ssl_min_protocol_version='TLSv1.2'
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB:-mydb}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_INITDB_ARGS=--auth-host=md5
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.postgres.rule=Host(`sql.codrstudio.dev`)"
-      - "traefik.http.routers.postgres.entrypoints=websecure"
-      - "traefik.http.routers.postgres.tls.certresolver=letsencrypt"
-      - "traefik.http.services.postgres.loadbalancer.server.port=5432"
+      - "traefik.tcp.routers.postgres.rule=HostSNI(`sql.codrstudio.dev`)"
+      - "traefik.tcp.routers.postgres.entrypoints=postgres"
+      - "traefik.tcp.routers.postgres.tls=true"
+      - "traefik.tcp.routers.postgres.tls.certresolver=letsencrypt"
+      - "traefik.tcp.services.postgres.loadbalancer.server.port=5432"
     networks:
       - codr-net
 
 networks:
   codr-net:
     external: true
-
