Aplicado melhoria na publicaco de pastas do servidor

--- a/srv/apps/code-server/docker-compose.yml
+++ b/srv/apps/code-server/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   code-server:
-    image: ghcr.io/coder/code-server:latest
+    build: .
     hostname: code-server
     container_name: code-server
     restart: unless-stopped
@@ -16,12 +16,21 @@ services:
       - "traefik.http.routers.code-server.tls.certresolver=letsencrypt"
       - "traefik.http.routers.code-server.service=code-server-service"
       - "traefik.http.services.code-server-service.loadbalancer.server.port=8080"
-      # Roteador e serviço para demo (porta 3000)
-      - "traefik.http.routers.demo.rule=Host(`demo.codrstudio.dev`)"
-      - "traefik.http.routers.demo.entrypoints=websecure"
-      - "traefik.http.routers.demo.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.demo.service=demo-service"
-      - "traefik.http.services.demo-service.loadbalancer.server.port=3000"
+      # Roteador para porta 3000
+      - "traefik.http.routers.code-server-3000.rule=Host(`code.codrstudio.dev`)"
+      - "traefik.http.routers.code-server-3000.entrypoints=websecure3k"
+      - "traefik.http.routers.code-server-3000.service=code-server-service-3000"
+      - "traefik.http.services.code-server-service-3000.loadbalancer.server.port=3000"
+      # Roteador para porta 5000
+      - "traefik.http.routers.code-server-5000.rule=Host(`code.codrstudio.dev`)"
+      - "traefik.http.routers.code-server-5000.entrypoints=websecure5k"
+      - "traefik.http.routers.code-server-5000.service=code-server-service-5000"
+      - "traefik.http.services.code-server-service-5000.loadbalancer.server.port=5000"
+      # Roteador para porta 8000
+      - "traefik.http.routers.code-server-8000.rule=Host(`code.codrstudio.dev`)"
+      - "traefik.http.routers.code-server-8000.entrypoints=websecure8k"
+      - "traefik.http.routers.code-server-8000.service=code-server-service-8000"
+      - "traefik.http.services.code-server-service-8000.loadbalancer.server.port=8000"
     networks:
       - codr-net
 networks:
