--- a/srv/apps/traefik/traefik.yml
+++ b/srv/apps/traefik/traefik.yml
@@ -6,13 +6,22 @@ entryPoints:
         entryPoint:
           to: websecure
           scheme: https
-
+ 
   websecure:
     address: ":443"
-
+ 
   ssh:
     address: ":2222"
-
+ 
+  websecure3k:
+    address: ":3000"
+ 
+  websecure5k:
+    address: ":5000"
+ 
+  websecure8k:
+    address: ":8000"
+ 
 api:
   dashboard: true
 
@@ -23,13 +32,12 @@ providers:
   file:
     directory: /etc/traefik/dynamic
     watch: true
-
+ 
 certificatesResolvers:
   letsencrypt:
     acme:
       email: guga.coder@gmail.com
       storage: /acme.json
       tlsChallenge: {}
-
+ 
 accessLog: {}
-
