Aplicado atualizcao nas configuracoes do docker

--- a/srv/apps/code-server/Dockerfile
+++ b/srv/apps/code-server/Dockerfile
@@ -1,12 +1,15 @@
 FROM ghcr.io/coder/code-server:latest
-
 USER root
 
-# Instalar dependências
+# Remover Node.js antigo e instalar versão 22
 RUN apt-get update && \
-    apt-get install -y npm && \
+    apt-get remove -y nodejs npm && \
+    curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
+    apt-get update && \
+    apt-get install -y nodejs && \
     apt-get install -y vim && \
     npm install -g @anthropic-ai/claude-code && \
+    npm install -g @google/gemini-cli && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
